# libnurbs

./: .gitignore  README.md
nurbs++/: AUTHORS  ChangeLog  Doxyfile.in  INSTALL  Makefile.am  Makefile.in  NEWS  README  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config_mvc.bat  configure  configure.ac  configure.in  mkinstalldirs  nurbs++-config.in
nurbs++/config/: cxx_features.m4  has_cppunit.m4  has_image_magick.m4
nurbs++/examples/: Makefile.am  Makefile.in
nurbs++/examples/image/: Makefile.am  Makefile.in  randomImg.cc
nurbs++/examples/matrix/: Makefile.am  Makefile.in  terr.C  tmatrix.C  tvqSort.C
nurbs++/examples/numerical/: Makefile.am  Makefile.in  tint.C  tint.cpp  tint2.C  tint2.cpp  tmatrixMat.cpp  tstatistics.cpp
nurbs++/examples/nurbs/: Makefile.am  Makefile.in  tclose.C  tdrawAa.cpp  thnurbsS.cpp  tleastS.C  tmatrixRT.cpp  tmeasures.C  tnApprox.cpp  tnInterp.C  tnInterp.cpp  tnMovePoint.cpp  tngl.cpp  tnlength.cpp  tnsMovePoint.C  tnsSweep.C  tnurbs.C  tnurbs.cpp  tnurbsS.C  tnurbsS_sp.cpp  tnurbsSub.cpp  tnurbs_sp.cpp  topengl.cpp  trispline.C
nurbs++/examples/vc6/: vc6.dsw
nurbs++/examples/vc6/terr/: terr.dsp
nurbs++/examples/vc6/tint/: tint.dsp
nurbs++/examples/vc6/tint2/: tint2.dsp
nurbs++/examples/vc6/tmatrix/: tmatrix.dsp
nurbs++/examples/vc6/tmatrixmat/: tmatrixmat.dsp
nurbs++/examples/vc6/tnaprox/: tnaprox.dsp
nurbs++/examples/vc6/tnclosed/: tnclosed.dsp
nurbs++/examples/vc6/tninterp/: tninterp.dsp
nurbs++/examples/vc6/tnlength/: tnlength.dsp
nurbs++/examples/vc6/tnurbs/: tnurbs.dsp
nurbs++/examples/vc6/tvqsort/: tvqsort.dsp
nurbs++/image/: Makefile.am  Makefile.in  color.cc  color.cpp  color.h  color.hh  filter.cc  filter.cpp  filter.h  filter.hh  filter_.cc  filter_.cpp  image.cc  image.cpp  image.h  image.hh  image_.cc  image_.cpp  rec_filter.cc  rec_filter.cpp  rec_filter.h  rec_filter.hh  rec_filter_.cc  rec_filter_.cpp
nurbs++/include/: Makefile.am  Makefile.in  plib.h  plib_config.h.in  plib_config.hh  plib_config.hh.in
nurbs++/matrix/: .cvsignore  Makefile.am  Makefile.in  barray.cc  barray.cpp  barray.h  barray.hh  barray2d.cc  barray2d.cpp  barray2d.h  barray2d.hh  barray2d_char.cc  barray2d_char.cpp  barray2d_complex.cc  barray2d_complex.cpp  barray2d_coordinate.cc  barray2d_coordinate.cpp  barray2d_double.cc  barray2d_double.cpp  barray2d_float.cc  barray2d_float.cpp  barray2d_hpoint.cc  barray2d_hpoint.cpp  barray2d_int.cc  barray2d_int.cpp  barray2d_point.cc  barray2d_point.cpp  barray2d_uchar.cc  barray2d_uchar.cpp  barray_char.cc  barray_char.cpp  barray_complex.cc  barray_complex.cpp  barray_coordinate.cc  barray_coordinate.cpp  barray_double.cc  barray_double.cpp  barray_float.cc  barray_float.cpp  barray_hpoint.cc  (+91 more)
nurbs++/morph/: Makefile.am  kernel.cpp  kernel.h  transform.cpp  transform.h  watershed.cpp  watershed.h
nurbs++/numerical/: Makefile.am  Makefile.in  chebexp.cc  chebexp_.cc  fft.cc  fft_.cpp  intccq.cc  intccq.cpp  intccq_.cc  intccq_.cpp  integrate.hh  matrixMat.cc  matrixMat.cpp  matrixMat.h  matrixMat.hh  matrixMat_.cc  matrixMat_.cpp  statistic.cpp  statistic.h  statistic.hh  statistic_.cc  statistic_.cpp
nurbs++/nurbs/: Makefile.am  Makefile.in  curve.cc  curve.cpp  curve.h  curve.hh  d_curve.cpp  d_hnurbsS.cpp  d_hnurbsS_sp.cpp  d_nurbs.cpp  d_nurbsArray.cc  d_nurbsS.cc  d_nurbsS_sp.cpp  d_nurbsSub.cc  d_nurbs_sp.cpp  d_surface.cc  d_surface.cpp  d_tri_spline.cpp  f_curve.cc  f_hnurbsS.cpp  f_hnurbsS_sp.cc  f_nurbs.cpp  f_nurbsArray.cc  f_nurbsS.cc  f_nurbsS_sp.cpp  f_nurbsSub.cc  f_nurbs_sp.cpp  f_surface.cc  f_surface.cpp  f_tri_spline.cc  hnurbs.cc  hnurbs.cpp  hnurbs.h  hnurbs.hh  hnurbsS.cc  hnurbsS.cpp  hnurbsS.h  hnurbsS.hh  hnurbsS_sp.cc  hnurbsS_sp.cpp  (+42 more)
nurbs++/tests/: Makefile.am
nurbs++/tests/image/: Makefile.am  test_magick.cpp
nurbs++/tests/matrix/: Makefile.am  test_barray2d.cpp  test_matrix.cpp
nurbs++/tests/morph/: Makefile.am  test_basicTransform.cpp  test_kernels.cpp  test_main.cpp
nurbs++/tests/nurbs/: Makefile.am  test_main.cpp  test_nurbs.cpp
nurby/: Makefile
nurby/.moc/: moc_GLDisplay.cpp  moc_form1.cpp
nurby/.ui/: form1.cpp  form1.h  qmake_image_collection.cpp
nurby/nurby/: GLDisplay.cpp  GLDisplay.h  GLDisplay.pro  axis.cpp  axis.h  form1.ui  gl_util.cpp  nurby.cpp  nurby.pro  testGLDisplay.cpp
nurby/nurby/.moc/: moc_GLDisplay.cpp  moc_form1.cpp
nurby/nurby/.ui/: form1.cpp  form1.h  qmake_image_collection.cpp
